--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="android.bignerdranch.androidpractice"
+    package="android.bignerdranch.foodwikipedia"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <application
@@ -12,12 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidPractice"
+        android:theme="@style/Theme.FoodWikipedia.Light"
         tools:ignore="LockedOrientationActivity"
         tools:targetApi="31">
         <activity
             android:screenOrientation="portrait"
-            android:name=".FragmentContainer"
+            android:name="android.bignerdranch.foodwikipedia.FragmentContainer"
             android:exported="true" >
 
             <intent-filter>
