--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
 
     defaultConfig {
         applicationId "android.bignerdranch.foodwikipedia"
+        resConfigs("en", "ru", "uk")
         minSdk 21
         targetSdk 32
         versionCode 1
