--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
 
     <application
+        android:configChanges="locale"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,7 +19,7 @@
         tools:targetApi="31">
         <activity
             android:screenOrientation="portrait"
-            android:name="android.bignerdranch.foodwikipedia.FragmentContainer"
+            android:name="android.bignerdranch.foodwikipedia.ui.FragmentContainer"
             android:exported="true" >
 
             <intent-filter>
