--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
@@ -58,4 +59,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     implementation 'androidx.fragment:fragment-ktx:1.5.2'
+
+    implementation 'com.google.android.gms:play-services-ads:19.5.0'
+    implementation('androidx.work:work-runtime:2.7.1')
 }
