--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,10 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-ads:19.5.0'
     implementation('androidx.work:work-runtime:2.7.1')
+
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
 }
